# Lab-Project

./: README.md
code/: Algoritm.py  RPS.py  algorithm.py  algorithmv2  algorithmv2.py  algorithmv3.py  algorithmv4.py  botfight.py  bottest  bottest.py  main.py  rock-paper-scissors.py  ui.py
data/: emissions.txt  routes.txt
documentation/: requirements.txt
tests/: .coverage  pyproject.toml
tests/src/: RPS.py  algorithmv3.py
tests/src/tests/: algorithmv3_test.py
