[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Aki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
